tests/cases/memory/ok/pointer-deref.ari
fn main() -> i64 {
  var value: i64 = 4;
  let raw: ptr i64 = (ref mut value) as ptr i64;
  *raw = *raw + 8;

  var byte: u8 = 1;
  let byte_ptr: ptr u8 = (ref mut byte) as ptr u8;
  *byte_ptr += 2u8;

  value + ((*byte_ptr) as i64)
}
