tests/cases/memory/errors/pointer-deref-non-pointer.ari
fn main() -> i64 {
  let value = *1;
  value
}
